tests/NormalTests/paczka2/big_fuzzy/52918512.err
Error in line 2: pSpVoS28l3 A465 9,5
Error in line 14: pSpVoS28l3 A708 40,1
Error in line 17: S598 S746 363,6
Error in line 18: S598 A708 25,1
Error in line 19: S598 S598 93,2
Error in line 16: glb9mfT3iCk A708 7,0
Error in line 29: YMygaNJL S598 84,7
Error in line 35: S598 A465 30,0
Error in line 22: wQz0W S746 66,1
Error in line 42: wQz0W A708 50,0
Error in line 46: YMygaNJL S746 75,5
Error in line 58: wQz0W S598 9,5
Error in line 62: glb9mfT3iCk A465 54,6
Error in line 59: pSpVoS28l3 A465 82,6
Error in line 71: YMygaNJL S598 70,2
Error in line 81: pSpVoS28l3 S746 17,2
Error in line 103: YMygaNJL S598 50,72
Error in line 108: pSpVoS28l3 S7}6 21,6
Error in line 114: uiiuephi S598 34,4
Error in line 121: n7JI1Gkgp A708 56,8
Error in line 131: n7JI1Gkgp S746 21,0
Error in line 140: pSpVoS28l3 A465 0,0
Error in line 130: S598 S746 292,0
Error in line 145: n7JI1Gkgp S746 48,02
Error in line 138: n7JI1Gkgp S746 2,9
Error in line 141: pSpVoS28l3 S598 63,9
Error in line 150: pSpVoS28l3 S746 66,8
Error in line 154: uiiuephi A465 50,2
Error in line 168: YMygaNJL S598 127,2
Error in line 173: glb9mfT3iCk A708 22,5
Error in line 186: wQz0W S746 79,8
Error in line 175: pSpVoS28l3 A708 78,9
Error in line 165: S598 S746 4,6
Error in line 193: uiiuephi A708 44,0
Error in line 198: S598 S598 184,6
Error in line 206: glb9mfT3iCk S598 57,0
Error in line 228: pSpVoS28l3 S598 89,7
Error in line 231: glb9mfT3iCk A465 137,2
